--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,8 +1,4 @@
-<%
-=begin%>
- <form action="???">
-  <input type="text" name="???">
+ <form action="/answer">
+  <input type="text" name="answer-number">
   <input type="submit" value="Ask!">
 </form>
-<%
-=end%>
