--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,7 +1,5 @@
   <p><%=@answer%></p>
   <p><%=@question%></p>
-  <%
-=begin%>
- <%= link_to "ask", root_path  %>
-<%
-=end%>
+
+
+ <%= link_to "Ask another question", ask_path%>
