--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,5 +1,7 @@
-  <p><%=@answer%></p>
-  <p><%=@question%></p>
+  <h1><%=@answer%></h1>
+  <p> - Coach</p>
+  <h2><%=@question%></h2>
+  <p> - You</p>
 
 
  <%= link_to "Ask another question", ask_path%>
