--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,11 +1,13 @@
- <form action="/answer" method="get">
- Ask a Question
+<h1>Stupid Coaching</h1>
+<h2>Ask your coach anything</h2>
+ <form action="/answer" method="get" class="form-inline form-group mb-2">
+
      <%
 =begin%>
  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
     <%= hidden_field_tag :letters, 'abcd' %>
 <%
 =end%>
-  <input type="text" name="question" value="<%= params[:question] %>">
+  <input type="text" name="question"  class="form-control"  value="<%= params[:question] %>">
   <input type="submit" value="Ask!">
 </form>
